RESOLVED FIXED212662
AXIsolatedTree::updateNode should not call nodeForID.
https://bugs.webkit.org/show_bug.cgi?id=212662
Summary AXIsolatedTree::updateNode should not call nodeForID.
Andres Gonzalez
Reported 2020-06-02 14:26:45 PDT
AXIsolatedTree::updateNode should not call nodeForID.
Attachments
Patch (2.47 KB, patch)
2020-06-02 15:56 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-06-02 15:56:42 PDT
chris fleizach
Comment 2 2020-06-02 16:00:22 PDT
Comment on attachment 400862 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=400862&action=review > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:-206 > - if (auto object = nodeForID(axID)) { do you want to add an assert in nodeForID about what thread its on?
EWS
Comment 3 2020-06-02 16:59:28 PDT
Committed r262463: <https://trac.webkit.org/changeset/262463> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400862 [details].
Radar WebKit Bug Importer
Comment 4 2020-06-02 17:00:20 PDT
Note You need to log in before you can comment on or make changes to this bug.