AXIsolatedTree::updateNode should not call nodeForID. https://bugs.webkit.org/show_bug.cgi?id=212662

Reviewed by Chris Fleizach.

In isolated tree mode AXIsolatedTree::nodeForID should be called only
on the secondary AX thread. So removing the need to call nodeForID in
updateNode by using AXCoreObject::childrenIDs() instead of retrieving
the isolated node to access its children IDs.

* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNode):


Canonical link: https://commits.webkit.org/225492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262463 268f45cc-cd09-0410-ab3c-d52691b4dbfc